--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ kivy
 kivymd
 kivy_garden.graph --extra-index-url https://kivy-garden.github.io/simple/
 kivy_garden.draggable>=0.2,<0.3
+google-generativeai
