--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ kivymd
 kivy_garden.graph --extra-index-url https://kivy-garden.github.io/simple/
 kivy_garden.draggable>=0.2,<0.3
 google-generativeai
+protos
